--- a/styles-espresso-cafe/editar-perfil.css
+++ b/styles-espresso-cafe/editar-perfil.css
@@ -14,7 +14,7 @@ h2 {
 
 /* === FORMULARIO === */
 form#editProfileForm {
-  background-color: #fffaf5;
+  background-color: #fdfdfd;
   border: 1px solid #e3dcd2;
   box-shadow: 0 0 10px rgba(89, 63, 44, 0.1);
   padding: 3rem 2.5rem;
