--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ img {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
 }
 
-/* 👤 Botón de perfil del usuario logueado */
+/* Botón de perfil del usuario logueado */
 .btn-profile {
   background-color: transparent;
   color: #ffffff;
@@ -122,7 +122,7 @@ img {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   font-size: 1.6rem;
-  margin-right: 2rem; /* 🧱 Separación del scroll lateral */
+  margin-right: 2rem; 
 }
 
 .btn-profile:hover {
@@ -138,7 +138,7 @@ img {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
 }
 
-/* 👤 Botón de perfil del usuario logueado */
+/* Botón de perfil del usuario logueado */
 .btn-profile {
   background-color: transparent;
   color: #ffffff;
@@ -152,7 +152,7 @@ img {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   font-size: 1.6rem;
-  margin-right: 2rem; /* 🧱 Separación del scroll lateral */
+  margin-right: 2rem;
   display: flex;
   align-items: center;
   gap: 0.6rem;
@@ -187,7 +187,7 @@ img {
   font-family: "Avigea";
   color: #133936;
   font-weight: bold;
-  font-size: 4.6rem;
+  font-size: 5.4rem;
   text-align: center;
   letter-spacing: 0.2rem;
   margin: 3rem 0 5rem;
