--- a/styles-espresso-cafe/about-us.css
+++ b/styles-espresso-cafe/about-us.css
@@ -18,10 +18,11 @@
 }
 
 .image-container {
-  width: 45rem;
-  height: 30rem;
+  width: 100%;
+  max-width: 45rem;
+  height: auto;
+  aspect-ratio: 3 / 2; 
   overflow: hidden;
-  position: relative;
   margin: 0 auto;
 }
 
